fix text overflow and add better signifiers to game

--- a/src/styles/views/Game.scss
+++ b/src/styles/views/Game.scss
@@ -33,7 +33,6 @@
   &.rect {
     position: absolute;
     opacity: 30%;
-    cursor: pointer;
   }
 
   &.title {
